# exctrap

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
exctrap/: __init__.py
tests/: test_exctrap.py
