[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "exctrap"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
    { name="Isaac To", email="isaac.to@gmail.com" },
]
description = "Exception trap"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/isaacto/exctrap"
Repository = "https://github.com/isaacto/exctrap.git"
Issues = "https://github.com/isaacto/exctrap/issues"

[tool.hatch.version]
source = "regex"
path = "exctrap/__init__.py"
